grammar.js
    program: ($) =>
      choice(
        seq(
          optional(field("leading", $.linebreak)),
          optional($._horizontal_layout),
          field("commands", $.complete_commands),
          optional(field("trailing", $.linebreak)),
          optional($._free_trailing_layout),
        ),
        seq(
          optional(field("leading", $.linebreak)),
          optional($._horizontal_layout),
          optional(trailingComment($)),
        ),
      ),

    complete_commands: ($) =>
      seq(
        field("command", $.complete_command),
        repeat(
          seq(
            choice(
              field(
                "separator",
                alias($._separator_led_newline_list, $.newline_list),
              ),
              seq($._term_continuation, field("separator", $.newline_list)),
              field(
                "separator",
                alias($._here_document_led_newline_list, $.newline_list),
              ),
            ),
            optional($._horizontal_layout),
            field("command", $.complete_command),
          ),
        ),
        optional($._term_boundary),
      ),

    complete_command: ($) =>
      seq(
        field("body", $.list),
        optional(
          choice(
            seq(
              $._terminator_ahead,
              optional($._horizontal_layout),
              field("terminator", $.separator_op),
            ),
            $._term_boundary,
          ),
        ),
      ),

    list: ($) =>
      seq(
        field("and_or", $.and_or),
        repeat(
          seq(
            $._list_continuation,
            optional($._horizontal_layout),
            field("separator", $.separator_op),
            optional($._horizontal_layout),
            field("and_or", $.and_or),
          ),
        ),
      ),

    and_or: ($) =>
      seq(
        field("pipeline", $.pipeline),
        repeat(
          seq(
            $._and_or_continuation,
            optional($._horizontal_layout),
            field("operator", choice($._and_if, $._or_if)),
            linebreakLayout($),
            field("pipeline", $.pipeline),
          ),
        ),
      ),

    pipeline: ($) =>
      seq(
        optional(
          seq(field("negation", $.bang), optional($._horizontal_layout)),
        ),
        field("sequence", $.pipe_sequence),
      ),

    pipe_sequence: ($) =>
      seq(
        field("command", $.command),
        repeat(
          seq(
            $._pipe_continuation,
            optional($._horizontal_layout),
            physical($, $._punct_pipe, "|"),
            linebreakLayout($),
            field("command", $.command),
          ),
        ),
      ),

    command: ($) =>
      choice(
        field("body", $.simple_command),
        $._redirectable_compound_command,
        field("body", $.function_definition),
      ),

    _redirectable_compound_command: ($) => redirectableCompoundCommand($),

    separator_op: ($) =>
      choice(
        physical($, $._punct_ampersand, "&"),
        physical($, $._punct_semicolon, ";"),
      ),

    _operator_separator: ($) =>
      separatorOperatorLayout($, field("operator", $.separator_op)),

    _newline_separator: ($) => field("newlines", $.newline_list),

    _separator_led_newline_separator: ($) =>
      field("newlines", alias($._separator_led_newline_list, $.newline_list)),

    _here_document_led_separator: ($) =>
      field(
        "newlines",
        alias($._here_document_led_newline_list, $.newline_list),
      ),

    _here_document_led_operator_separator: ($) =>
      seq(
        field("operator", $.separator_op),
        field("linebreak", alias($._here_document_led_linebreak, $.linebreak)),
      ),

    term: ($) =>
      seq(
        field("and_or", $.and_or),
        repeat(
          seq(
            choice(
              field(
                "separator",
                alias($._separator_led_newline_separator, $.separator),
              ),
              seq(
                $._term_continuation,
                choice(
                  seq(
                    optional($._horizontal_layout),
                    field(
                      "separator",
                      alias($._operator_separator, $.separator),
                    ),
                  ),
                  field("separator", alias($._newline_separator, $.separator)),
                ),
              ),
              seq(
                optional($._closing_layout),
                field(
                  "separator",
                  alias($._here_document_led_operator_separator, $.separator),
                ),
              ),
              field(
                "separator",
                alias($._here_document_led_separator, $.separator),
              ),
            ),
            optional($._horizontal_layout),
            field("and_or", $.and_or),
          ),
        ),
        optional($._term_boundary),
      ),

    compound_list: ($) =>
      seq(
        optional(field("leading", $.linebreak)),
        optional($._horizontal_layout),
        field("body", $.term),
        optional(
          choice(
            seq(
              optional(
                seq($._terminator_ahead, optional($._horizontal_layout)),
              ),
              field("terminator", alias($._operator_separator, $.separator)),
            ),
            field("terminator", alias($._newline_separator, $.separator)),
          ),
        ),
      ),

    _and_if: ($) => alias($._and_if_lexeme, $.and_if),
    _or_if: ($) => alias($._or_if_lexeme, $.or_if),
    _in_keyword_source: ($) => alias($._in_keyword_lexeme, $.in_keyword),
    _case_keyword_source: ($) => alias($._case_keyword_lexeme, $.case_keyword),
    compound_command: ($) =>
      choice(
        $.brace_group,
        $.subshell,
        $.for_clause,
        $.case_clause,
        $.if_clause,
        $.while_clause,
        $.until_clause,
      ),

    brace_group: ($) =>
      seq(
        physical($, $._left_brace, "{"),
        compoundListField($, "body"),
        optional($._closing_layout),
        physical($, $._right_brace, "}"),
      ),

    subshell: ($) =>
      seq(
        physical($, $._punct_left_parenthesis, "("),
        field("body", $.compound_list),
        optional($._closing_layout),
        physical($, $._punct_right_parenthesis, ")"),
      ),
    in: ($) => $._in_keyword_source,

    if_clause: ($) => prec.right(ifClause($)),

    case_clause: ($) =>
      seq(
        $._case_keyword_source,
        $._word_separator,
        field("word", $.word),
        reservedWordLinebreak($),
        field("in", $.in),
        linebreakLayout($),
        caseClauseItems($),
      ),

    case_list: ($) => repeat1(field("item", $.case_item)),

    case_item: ($) =>
      seq(
        field("patterns", $.pattern_list),
        $._pattern_end,
        optional($._horizontal_layout),
        physical($, $._punct_right_parenthesis, ")"),
        choice(
          linebreakLayout($),
          prec.dynamic(10, field("body", $.compound_list)),
        ),
        seq($._case_item_end, optional($._horizontal_layout)),
        field("terminator", choice($._dsemi, $._semi_and)),
        optional(reservedWordLinebreak($)),
      ),

    pattern_list: ($) =>
      prec.dynamic(
        2,
        seq(
          optional(
            seq(
              physical($, $._punct_left_parenthesis, "("),
              optional($._horizontal_layout),
            ),
          ),
          field("word", $.word),
          repeat(
            seq(
              $._pattern_continuation,
              optional($._horizontal_layout),
              physical($, $._punct_pipe, "|"),
              optional($._horizontal_layout),
              field("word", $.word),
            ),
          ),
        ),
      ),
    _dsemi: ($) => alias($._dsemi_lexeme, $.dsemi),
    _semi_and: ($) => alias($._semi_and_lexeme, $.semi_and),
    simple_command: ($) =>
      choice(
        seq(
          field("prefix", $.cmd_prefix),
          optional(
            seq(
              $._word_separator,
              field("word", $.cmd_word),
              optional(field("suffix", $.cmd_suffix)),
            ),
          ),
        ),
        seq(field("name", $.cmd_name), optional(field("suffix", $.cmd_suffix))),
      ),

    cmd_name: ($) => $.word,

    cmd_suffix: ($) =>
      repeat1(
        choice(
          seq($._word_separator, field("word", $.word)),
          ...commandRedirectContinuations($),
        ),
      ),

    variable_name: ($) => lexical($, $._variable_name_begin),
    word: ($) => $._source_word,

    _source_word: ($) =>
      seq(
        $._word_begin,
        choice(
          seq($.tilde_expansion, repeat($._word_part)),
          repeat1($._word_part),
        ),
      ),

    literal: ($) => lexical($, $._literal_begin),

    ...fallbackRules("word"),
    ...fallbackRules("assignment"),
    ...fallbackRules("parameter"),
    single_quoted: ($) =>
      seq(
        physical($, $._sq_open, "'"),
        optional($.single_quote_content),
        physical($, $._sq_close, "'"),
      ),
    single_quote_content: ($) => lexical($, $._single_quote_content_begin),
    double_quoted: ($) =>
      seq(
        physical($, $._dq_open, '"'),
        repeat(doubleQuotedPart($)),
        physical($, $._dq_close, '"'),
      ),

    double_quote_text: ($) => lexical($, $._double_quote_text_begin),

    parameter_expansion: ($) =>
      parameterExpansion($, $._braced_parameter_expansion),

    _braced_parameter_expansion: ($) =>
      bracedParameterExpansion($, $._parameter_expansion_tail),

    command_substitution: ($) =>
      commandSubstitution($, $._command_or_arithmetic_substitution_start),

    _command_or_arithmetic_substitution_start: ($) =>
      $._command_substitution_start,
    command_substitution_body: ($) =>
      prec.left(substitutionCommandsBody($, $._closing_layout)),

    backquote_substitution: ($) =>
      seq(
        backquoteDelimiter($, $._backquote_start),
        optional(field("body", $.backquote_substitution_body)),
        backquoteDelimiter($, $._backquote_end),
      ),
    backquote_substitution_body: ($) => $._substitution_body,

    _substitution_body: ($) =>
      prec.left(substitutionCommandsBody($, $._horizontal_layout)),

    _arithmetic_expansion_start: ($) =>
      arithmeticExpansionStart($, $._arithmetic_left_parenthesis),

    _arithmetic_dynamic_expansion_start: ($) =>
      arithmeticExpansionStart($, $._arithmetic_dynamic_left_parenthesis),

    arithmetic_expansion: ($) =>
      choice(
        closedArithmeticExpansion(
          $,
          $._arithmetic_expansion_start,
          $._arithmetic_assignment_expression,
          arithmeticClosingLayout($),
        ),
        closedArithmeticExpansion(
          $,
          $._arithmetic_dynamic_expansion_start,
          $.arithmetic_dynamic_expression,
          arithmeticClosingLayout($),
        ),
      ),

    arithmetic_dynamic_expression: ($) =>
      prec.right(
        seq(
          repeat(
            seq($._arithmetic_source_part, optional($._arithmetic_layout)),
          ),
          field("runtime_fragment", $._arithmetic_runtime_fragment),
          repeat(
            seq(
              optional($._arithmetic_layout),
              choice($._arithmetic_source_part, $._arithmetic_runtime_fragment),
            ),
          ),
        ),
      ),

    _arithmetic_source_part: ($) =>
      choice(
        $.arithmetic_number,
        $.arithmetic_variable,
        $._arithmetic_source_operator,
        $.parenthesized_arithmetic_source,
      ),

    _arithmetic_runtime_fragment: ($) =>
      choice(
        alias($._double_quoted_parameter_expansion, $.parameter_expansion),
        $.command_substitution,
        $.arithmetic_expansion,
        alias(
          $._double_quoted_backquote_substitution,
          $.backquote_substitution,
        ),
        $.parenthesized_arithmetic_dynamic_source,
      ),

    parenthesized_arithmetic_source: ($) =>
      seq(
        physical($, $._punct_left_parenthesis, "("),
        optional($._arithmetic_layout),
        repeat(seq($._arithmetic_source_part, optional($._arithmetic_layout))),
        physical($, $._punct_right_parenthesis, ")"),
      ),

    parenthesized_arithmetic_dynamic_source: ($) =>
      seq(
        physical($, $._punct_left_parenthesis, "("),
        optional($._arithmetic_layout),
        field("expression", $.arithmetic_dynamic_expression),
        arithmeticClosingLayout($),
        physical($, $._punct_right_parenthesis, ")"),
      ),

    _arithmetic_assignment_expression: ($) =>
      choice(
        $.arithmetic_assignment_expression,
        $._arithmetic_conditional_expression,
      ),

    arithmetic_assignment_expression: ($) =>
      prec.right(
        seq(
          field("left", arithmeticLvalue($)),
          $._arithmetic_assignment_operator_segment,
          arithmeticOperandLayout($),
          field(
            "right",
            choice(
              $.arithmetic_assignment_expression,
              $._arithmetic_conditional_expression,
            ),
          ),
        ),
      ),

    _arithmetic_conditional_expression: ($) =>
      prec.right(
        choice(
          $.arithmetic_conditional_expression,
          $._arithmetic_logical_or_expression,
        ),
      ),

    arithmetic_conditional_expression: ($) =>
      prec.right(
        seq(
          field("condition", $._arithmetic_logical_or_expression),
          $._arithmetic_question_operator_segment,
          arithmeticOperandLayout($),
          field("consequence", $._arithmetic_assignment_expression),
          $._arithmetic_colon_operator_segment,
          arithmeticOperandLayout($),
          field("alternative", $._arithmetic_conditional_expression),
        ),
      ),

    ...arithmeticBinaryLevelRules(),

    arithmetic_unary_expression: ($) => arithmeticUnaryExpression($),
    parenthesized_arithmetic: ($) =>
      parenthesizedArithmetic($, $._arithmetic_assignment_expression),

    arithmetic_number: ($) => lexical($, $._arithmetic_number_begin),
    arithmetic_variable: ($) => lexical($, $._arithmetic_variable_begin),
    _arithmetic_assignment_operator_segment: ($) =>
      arithmeticOperatorSegment(
        $,
        $._arithmetic_assignment_operator_boundary,
        $._arithmetic_assignment_operator,
      ),

    _arithmetic_question_operator_segment: ($) =>
      arithmeticOperatorSegment(
        $,
        $._arithmetic_question_operator_boundary,
        alias($._arithmetic_question_operator_lexeme, $.arithmetic_operator),
      ),
    _arithmetic_colon_operator_segment: ($) =>
      arithmeticOperatorSegment(
        $,
        $._arithmetic_colon_operator_boundary,
        alias($._arithmetic_colon_operator_lexeme, $.arithmetic_operator),
      ),
    ...arithmeticBinaryOperatorSegmentRules(),

    _arithmetic_layout: ($) =>
      repeat1(choice(lexical($, $._arithmetic_blank_begin), $._newline)),

    newline_list: ($) => prec.right(repeat1(choice(...newlineListElements($)))),

    _separator_led_newline_list: ($) =>
      ledNewlineList($, seq($._separator_newline, $._layout_newline)),

    _here_document_led_newline_list: ($) =>
      ledNewlineList($, $.here_document_sequence),

    linebreak: ($) => $.newline_list,

    _horizontal_layout: ($) => seq(optional($._layout_begin), $._blank),
    _closing_layout: ($) => $._blank,
    _word_separator: ($) => wordSeparator($, $._word_separator_begin),

    _free_trailing_layout: ($) =>
      prec.right(1, choice($._closing_layout, trailingComment($))),
