test/corpus/arithmetic_expansions.txt
==================
arithmetic assignment operators remain structured after horizontal layout
==================

: "$((a = b *= c /= d %= e += f -= g <<= h >>= i &= j ^= k |= l))"

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (double_quoted
                        (arithmetic_expansion
                          (arithmetic_assignment_expression
                            (arithmetic_variable)
                            (arithmetic_operator)
                            (arithmetic_assignment_expression
                              (arithmetic_variable)
                              (arithmetic_operator)
                              (arithmetic_assignment_expression
                                (arithmetic_variable)
                                (arithmetic_operator)
                                (arithmetic_assignment_expression
                                  (arithmetic_variable)
                                  (arithmetic_operator)
                                  (arithmetic_assignment_expression
                                    (arithmetic_variable)
                                    (arithmetic_operator)
                                    (arithmetic_assignment_expression
                                      (arithmetic_variable)
                                      (arithmetic_operator)
                                      (arithmetic_assignment_expression
                                        (arithmetic_variable)
                                        (arithmetic_operator)
                                        (arithmetic_assignment_expression
                                          (arithmetic_variable)
                                          (arithmetic_operator)
                                          (arithmetic_assignment_expression
                                            (arithmetic_variable)
                                            (arithmetic_operator)
                                            (arithmetic_assignment_expression
                                              (arithmetic_variable)
                                              (arithmetic_operator)
                                              (arithmetic_assignment_expression
                                                (arithmetic_variable)
                                                (arithmetic_operator)
                                                (arithmetic_variable))))))))))))))))))))))))
  (linebreak
    (newline_list)))

==================
arithmetic conditional and binary operators preserve their nested precedence
==================

: "$((a ? b || c && d | e ^ f & g == h != i < j <= k > l >= m << n >> o + p - q * r / s % t : u))"

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (double_quoted
                        (arithmetic_expansion
                          (arithmetic_conditional_expression
                            (arithmetic_variable)
                            (arithmetic_operator)
                            (arithmetic_binary_expression
                              (arithmetic_variable)
                              (arithmetic_operator)
                              (arithmetic_binary_expression
                                (arithmetic_variable)
                                (arithmetic_operator)
                                (arithmetic_binary_expression
                                  (arithmetic_variable)
                                  (arithmetic_operator)
                                  (arithmetic_binary_expression
                                    (arithmetic_variable)
                                    (arithmetic_operator)
                                    (arithmetic_binary_expression
                                      (arithmetic_variable)
                                      (arithmetic_operator)
                                      (arithmetic_binary_expression
                                        (arithmetic_binary_expression
                                          (arithmetic_variable)
                                          (arithmetic_operator)
                                          (arithmetic_variable))
                                        (arithmetic_operator)
                                        (arithmetic_binary_expression
                                          (arithmetic_binary_expression
                                            (arithmetic_binary_expression
                                              (arithmetic_binary_expression
                                                (arithmetic_variable)
                                                (arithmetic_operator)
                                                (arithmetic_variable))
                                              (arithmetic_operator)
                                              (arithmetic_variable))
                                            (arithmetic_operator)
                                            (arithmetic_variable))
                                          (arithmetic_operator)
                                          (arithmetic_binary_expression
                                            (arithmetic_binary_expression
                                              (arithmetic_variable)
                                              (arithmetic_operator)
                                              (arithmetic_variable))
                                            (arithmetic_operator)
                                            (arithmetic_binary_expression
                                              (arithmetic_binary_expression
                                                (arithmetic_variable)
                                                (arithmetic_operator)
                                                (arithmetic_variable))
                                              (arithmetic_operator)
                                              (arithmetic_binary_expression
                                                (arithmetic_binary_expression
                                                  (arithmetic_binary_expression
                                                    (arithmetic_variable)
                                                    (arithmetic_operator)
                                                    (arithmetic_variable))
                                                  (arithmetic_operator)
                                                  (arithmetic_variable))
                                                (arithmetic_operator)
                                                (arithmetic_variable)))))))))))
                            (arithmetic_operator)
                            (arithmetic_variable))))))))))))))
  (linebreak
    (newline_list)))

==================
arithmetic expansion follows POSIX expression precedence
==================

printf "$((a = b += 2 ? b << 1 : ~b & 7))" "$((0x10 + 077 + (value * 3)))"

---

(program
  leading: (linebreak
    (newline_list))
  commands: (complete_commands
    command: (complete_command
      body: (list
        and_or: (and_or
          pipeline: (pipeline
            sequence: (pipe_sequence
              command: (command
                body: (simple_command
                  name: (cmd_name
                    (word
                      (literal)))
                  suffix: (cmd_suffix
                    word: (word
                      (double_quoted
                        (arithmetic_expansion
                          expression: (arithmetic_assignment_expression
                            left: (arithmetic_variable)
                            operator: (arithmetic_operator)
                            right: (arithmetic_assignment_expression
                              left: (arithmetic_variable)
                              operator: (arithmetic_operator)
                              right: (arithmetic_conditional_expression
                                condition: (arithmetic_number)
                                operator: (arithmetic_operator)
                                consequence: (arithmetic_binary_expression
                                  left: (arithmetic_variable)
                                  operator: (arithmetic_operator)
                                  right: (arithmetic_number))
                                operator: (arithmetic_operator)
                                alternative: (arithmetic_binary_expression
                                  left: (arithmetic_unary_expression
                                    operator: (arithmetic_operator)
                                    operand: (arithmetic_variable))
                                  operator: (arithmetic_operator)
                                  right: (arithmetic_number))))))))
                    word: (word
                      (double_quoted
                        (arithmetic_expansion
                          expression: (arithmetic_binary_expression
                            left: (arithmetic_binary_expression
                              left: (arithmetic_number)
                              operator: (arithmetic_operator)
                              right: (arithmetic_number))
                            operator: (arithmetic_operator)
                            right: (parenthesized_arithmetic
                              expression: (arithmetic_binary_expression
                                left: (arithmetic_variable)
                                operator: (arithmetic_operator)
                                right: (arithmetic_number))))))))))))))))
  trailing: (linebreak
    (newline_list)))

==================
unary signs bind adjacent static operands
==================

: "$((-x))" "$((+x + y))" "$((1+-2))" "$((-x + $y))"

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (double_quoted
                        (arithmetic_expansion
                          (arithmetic_unary_expression
                            (arithmetic_operator)
                            (arithmetic_variable)))))
                    (word
                      (double_quoted
                        (arithmetic_expansion
                          (arithmetic_binary_expression
                            (arithmetic_unary_expression
                              (arithmetic_operator)
                              (arithmetic_variable))
                            (arithmetic_operator)
                            (arithmetic_variable)))))
                    (word
                      (double_quoted
                        (arithmetic_expansion
                          (arithmetic_binary_expression
                            (arithmetic_number)
                            (arithmetic_operator)
                            (arithmetic_unary_expression
                              (arithmetic_operator)
                              (arithmetic_number))))))
                    (word
                      (double_quoted
                        (arithmetic_expansion
                          (arithmetic_binary_expression
                            (arithmetic_unary_expression
                              (arithmetic_operator)
                              (arithmetic_variable))
                            (arithmetic_operator)
                            (parameter_expansion
                              (variable_name)))))))))))))))
  (linebreak
    (newline_list)))

==================
parenthesized arithmetic variables remain valid assignment left operands
==================

: "$(((name) = 1))" "$((((nested)) += 2))"

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (double_quoted
                        (arithmetic_expansion
                          (arithmetic_assignment_expression
                            (parenthesized_arithmetic
                              (arithmetic_variable))
                            (arithmetic_operator)
                            (arithmetic_number)))))
                    (word
                      (double_quoted
                        (arithmetic_expansion
                          (arithmetic_assignment_expression
                            (parenthesized_arithmetic
                              (parenthesized_arithmetic
                                (arithmetic_variable)))
                            (arithmetic_operator)
                            (arithmetic_number))))))))))))))
  (linebreak
    (newline_list)))

==================
arithmetic expansion preserves balanced and nested source
==================

echo $((1 + (2 * ${factor}) + $(value) + $((3 + 4))))

---

(program
  leading: (linebreak
    (newline_list))
  commands: (complete_commands
    command: (complete_command
      body: (list
        and_or: (and_or
          pipeline: (pipeline
            sequence: (pipe_sequence
              command: (command
                body: (simple_command
                  name: (cmd_name
                    (word
                      (literal)))
                  suffix: (cmd_suffix
                    word: (word
                      (arithmetic_expansion
                        expression: (arithmetic_binary_expression
                          left: (arithmetic_binary_expression
                            left: (arithmetic_binary_expression
                              left: (arithmetic_number)
                              operator: (arithmetic_operator)
                              right: (parenthesized_arithmetic
                                expression: (arithmetic_binary_expression
                                  left: (arithmetic_number)
                                  operator: (arithmetic_operator)
                                  right: (parameter_expansion
                                    parameter: (variable_name)))))
                            operator: (arithmetic_operator)
                            right: (command_substitution
                              body: (command_substitution_body
                                (complete_commands
                                  command: (complete_command
                                    body: (list
                                      and_or: (and_or
                                        pipeline: (pipeline
                                          sequence: (pipe_sequence
                                            command: (command
                                              body: (simple_command
                                                name: (cmd_name
                                                  (word
                                                    (literal))))))))))))))
                          operator: (arithmetic_operator)
                          right: (arithmetic_expansion
                            expression: (arithmetic_binary_expression
                              left: (arithmetic_number)
                              operator: (arithmetic_operator)
                              right: (arithmetic_number)))))))))))))))
  trailing: (linebreak
    (newline_list)))

==================
dynamic arithmetic source remains structured without evaluation
==================

printf "$((1 $operator 2))" "$(($left + $(value)))" "$((1 + (2 $operator 3)))"

---

(program
  leading: (linebreak
    (newline_list))
  commands: (complete_commands
    command: (complete_command
      body: (list
        and_or: (and_or
          pipeline: (pipeline
            sequence: (pipe_sequence
              command: (command
                body: (simple_command
                  name: (cmd_name
                    (word
                      (literal)))
                  suffix: (cmd_suffix
                    word: (word
                      (double_quoted
                        (arithmetic_expansion
                          expression: (arithmetic_dynamic_expression
                            (arithmetic_number)
                            runtime_fragment: (parameter_expansion
                              parameter: (variable_name))
                            (arithmetic_number)))))
                    word: (word
                      (double_quoted
                        (arithmetic_expansion
                          expression: (arithmetic_binary_expression
                            left: (parameter_expansion
                              parameter: (variable_name))
                            operator: (arithmetic_operator)
                            right: (command_substitution
                              body: (command_substitution_body
                                (complete_commands
                                  command: (complete_command
                                    body: (list
                                      and_or: (and_or
                                        pipeline: (pipeline
                                          sequence: (pipe_sequence
                                            command: (command
                                              body: (simple_command
                                                name: (cmd_name
                                                  (word
                                                    (literal)))))))))))))))))
                    word: (word
                      (double_quoted
                        (arithmetic_expansion
                          expression: (arithmetic_dynamic_expression
                            (arithmetic_number)
                            (arithmetic_operator)
                            runtime_fragment: (parenthesized_arithmetic_dynamic_source
                              expression: (arithmetic_dynamic_expression
                                (arithmetic_number)
                                runtime_fragment: (parameter_expansion
                                  parameter: (variable_name))
                                (arithmetic_number))))))))))))))))
  trailing: (linebreak
    (newline_list)))

==================
runtime arithmetic fragments can precede parenthesized source
==================

printf '%s\n' "$((a ${operator} (b + c)))"

---

(program
  leading: (linebreak
    (newline_list))
  commands: (complete_commands
    command: (complete_command
      body: (list
        and_or: (and_or
          pipeline: (pipeline
            sequence: (pipe_sequence
              command: (command
                body: (simple_command
                  name: (cmd_name
                    (word
                      (literal)))
                  suffix: (cmd_suffix
                    word: (word
                      (single_quoted
                        (single_quote_content)))
                    word: (word
                      (double_quoted
                        (arithmetic_expansion
                          expression: (arithmetic_dynamic_expression
                            (arithmetic_variable)
                            runtime_fragment: (parameter_expansion
                              parameter: (variable_name))
                            (parenthesized_arithmetic_source
                              (arithmetic_variable)
                              (arithmetic_operator)
                              (arithmetic_variable)))))))))))))))
  trailing: (linebreak
    (newline_list)))

==================
a case pattern inside an embedded substitution stays inside the arithmetic reading
==================

echo $(( $(case x in a) echo 1;; esac) + 1 ))

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (arithmetic_expansion
                        (arithmetic_binary_expression
                          (command_substitution
                            (command_substitution_body
                              (complete_commands
                                (complete_command
                                  (list
                                    (and_or
                                      (pipeline
                                        (pipe_sequence
                                          (command
                                            (compound_command
                                              (case_clause
                                                (case_keyword)
                                                (word
                                                  (literal))
                                                (in
                                                  (in_keyword))
                                                (case_list
                                                  (case_item
                                                    (pattern_list
                                                      (word
                                                        (literal)))
                                                    (compound_list
                                                      (term
                                                        (and_or
                                                          (pipeline
                                                            (pipe_sequence
                                                              (command
                                                                (simple_command
                                                                  (cmd_name
                                                                    (word
                                                                      (literal)))
                                                                  (cmd_suffix
                                                                    (word
                                                                      (literal))))))))))
                                                    (dsemi)))
                                                (esac_keyword))))))))))))
                          (arithmetic_operator)
                          (arithmetic_number)))))))))))))
  (linebreak
    (newline_list)))

==================
a case pattern esac after a pipe stays inside the validated substitution
==================

echo $(( $(case q in x|esac) echo 1;; esac) + 1 ))

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (arithmetic_expansion
                        (arithmetic_binary_expression
                          (command_substitution
                            (command_substitution_body
                              (complete_commands
                                (complete_command
                                  (list
                                    (and_or
                                      (pipeline
                                        (pipe_sequence
                                          (command
                                            (compound_command
                                              (case_clause
                                                (case_keyword)
                                                (word
                                                  (literal))
                                                (in
                                                  (in_keyword))
                                                (case_list
                                                  (case_item
                                                    (pattern_list
                                                      (word
                                                        (literal))
                                                      (word
                                                        (literal)))
                                                    (compound_list
                                                      (term
                                                        (and_or
                                                          (pipeline
                                                            (pipe_sequence
                                                              (command
                                                                (simple_command
                                                                  (cmd_name
                                                                    (word
                                                                      (literal)))
                                                                  (cmd_suffix
                                                                    (word
                                                                      (literal))))))))))
                                                    (dsemi)))
                                                (esac_keyword))))))))))))
                          (arithmetic_operator)
                          (arithmetic_number)))))))))))))
  (linebreak
    (newline_list)))

==================
a numeric case word keeps the substitution inside the dynamic reading
==================

echo $(( $(case 9 in x) echo 1;; esac) 1 ))

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (arithmetic_expansion
                        (arithmetic_dynamic_expression
                          (command_substitution
                            (command_substitution_body
                              (complete_commands
                                (complete_command
                                  (list
                                    (and_or
                                      (pipeline
                                        (pipe_sequence
                                          (command
                                            (compound_command
                                              (case_clause
                                                (case_keyword)
                                                (word
                                                  (literal))
                                                (in
                                                  (in_keyword))
                                                (case_list
                                                  (case_item
                                                    (pattern_list
                                                      (word
                                                        (literal)))
                                                    (compound_list
                                                      (term
                                                        (and_or
                                                          (pipeline
                                                            (pipe_sequence
                                                              (command
                                                                (simple_command
                                                                  (cmd_name
                                                                    (word
                                                                      (literal)))
                                                                  (cmd_suffix
                                                                    (word
                                                                      (literal))))))))))
                                                    (dsemi)))
                                                (esac_keyword))))))))))))
                          (arithmetic_number)))))))))))))
  (linebreak
    (newline_list)))

==================
a case after a command-prefix reserved word stays inside the arithmetic reading
==================

echo $(( $(if :; then case a in b) echo 1;; esac; fi) + 1 ))

---
